<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mingle</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="parse_app_id">6jzH3my3Ty5KlVCWBIAyUTzYJwFEzG9KNXp6RYTC</string>
    <string name="parse_app_secret">9Q3cqztyphOXA2nEpXoFXw9NbcB1PylzBtBYl3Tn</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="continue_label">Continue</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="unknown_exception">Unknown exception</string>
    <string name="unknown_runtime_exception">Unknown runtime exception</string>

    <string-array name="drawer_items">
        <item>Events</item>
        <item>Coworkers</item>
        <item>Hall of Badges</item>
    </string-array>
    <string-array name="drawer_items_icons">
        <item>ic_events</item>
        <item>ic_coworkers</item>
        <item>ic_badge</item>
    </string-array>

    <string name="invalid_field">Invalid field</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_password_length">Password should be at least %1$s characters long</string>
    <string name="invalid_password_confirmation">Confirmation and password don\'t match</string>
    <string name="auth_unknown">Unknown auth error</string>
    <string name="auth_invalid_info">Invalid authentication information</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_company_name">Company name</string>
    <string name="prompt_event_name">Event name</string>
    <string name="prompt_event_date">Date and time</string>
    <string name="prompt_event_location">Location</string>
    <string name="prompt_company_email">Member email (optional)</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_signin"><b>Sign in</b> with existing account</string>
    <string name="action_signup"><b>Register</b> a new account</string>
    <string name="action_select_all">Select All</string>
    <string name="action_signin_short">Sign in</string>
    <string name="action_signup_short">Sign up</string>
    <string name="action_birthday">Select your birthday</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="action_create_company"><b>Create</b> new company</string>
    <string name="action_create_event"><b>Create</b> new event</string>
    <string name="action_invite_event"><b>Invite</b> selected coworkers</string>
    <string name="action_invite_to_event"><b>Invite</b> more people</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_logout">Settings</string>
    <string name="title_activity_create_company">CreateCompanyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_choose_company">ChooseCompanyActivity</string>
    <string name="title_activity_create_event">Create new event</string>

    <!-- Events -->
    <string name="sports">sports</string>
    <string name="happyhour">happy hour</string>
    <string name="coffee">coffee</string>
    <string name="meeting">meeting</string>
    <string name="meal">meal</string>
    <string name="birthday">birthday</string>
    <string name="title_activity_invite_event">Invite coworkers</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_event_profile">EventProfileActivity</string>

</resources>