<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_event_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:weightSum="5" >

        <ImageView
            android:id="@+id/coffee"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/coffee"
            android:padding="20dp"
            android:src="@drawable/ic_coffee" />

        <ImageView
            android:id="@+id/meal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/meal"
            android:padding="24dp"
            android:src="@drawable/ic_meal" />

        <ImageView
            android:id="@+id/meeting"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/meeting"
            android:padding="24dp"
            android:src="@drawable/ic_meeting" />

        <ImageView
            android:id="@+id/happyhour"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/happyhour"
            android:padding="24dp"
            android:src="@drawable/ic_happyhour" />

        <ImageView
            android:id="@+id/sports"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/sports"
            android:padding="24dp"
            android:src="@drawable/ic_sports" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/event_type_label"
                style="@android:style/TextAppearance.Large.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="6dp"
                android:background="@drawable/rounded_edittext"
                android:drawableLeft="@drawable/ic_new_tag"
                android:drawablePadding="12dp"
                android:hint="@string/prompt_event_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="6dp"
                android:background="@drawable/rounded_edittext"
                android:drawableLeft="@drawable/ic_new_calendar"
                android:drawablePadding="12dp"
                android:hint="@string/prompt_event_date"
                android:inputType="datetime"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="6dp"
                android:background="@drawable/rounded_edittext"
                android:drawableLeft="@drawable/ic_new_location"
                android:drawablePadding="12dp"
                android:hint="@string/prompt_event_location"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_dark_button_bg"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_select_all"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_button_bg"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_create_event"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>