<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    style="@style/LoginFormContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context="io.github.luiseduardobrito.angelhack.activity.CreateCompanyActivity" >

    <ImageView
        android:id="@+id/capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="6dp"
        android:maxHeight="48dp"
        android:maxWidth="48dp"
        android:src="@drawable/ic_upload_image" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@drawable/ic_company_name"
        android:drawablePadding="12dp"
        android:hint="@string/prompt_company_name"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="10" >

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_weight="8"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:hint="@string/prompt_company_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/add_member"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:maxHeight="48dp"
            android:maxWidth="48dp"
            android:src="@drawable/ic_add_member" />
    </LinearLayout>

    <ListView
        android:id="@+id/invitations_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:divider="@android:color/transparent" >
    </ListView>

    <Button
        android:id="@+id/create_company_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_bg"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/action_create_company"
        android:textColor="@color/white" />

</LinearLayout>